infrastructure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zane-api-service
  namespace: zane
spec:
  selector:
    app: zane-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: zane
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: zane
spec:
  ports:
    - port: 27017
  selector:
    app: mongodb
